STENCIL-2455: Prevents carousel images from being cut off on large screens.

--- a/assets/scss/components/stencil/heroCarousel/_heroCarousel.scss
+++ b/assets/scss/components/stencil/heroCarousel/_heroCarousel.scss
@@ -15,6 +15,9 @@
 // 3. Visually overrides the top margin for '.body' defined in _body.scss.
 //    The '.body' top margin creates space between the header and page content.
 //    However, on the homepage, we want the carousel to be flush with the header.
+//
+// 4. Allows image to scale on large screens while preventing the top and bottom
+//    from becoming cut off.
 // -----------------------------------------------------------------------------
 
 .heroCarousel {
@@ -82,6 +85,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+
+    @include breakpoint("large") { // 4
+        background-size: 100% 100%;
+    }
 
     a {
         text-decoration: none;
